Cliente + Server Java funcionam, Cache por blocos também, precisa ser testado